--- a/packages/x-markdown/package.json
+++ b/packages/x-markdown/package.json
@@ -5,11 +5,11 @@
   "type": "module",
   "main": "./dist/index.js",
   "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "types": "./dist/types/index.d.ts",
   "exports": {
     ".": {
       "import": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "types": "./dist/types/index.d.ts"
     },
     "./style": "./dist/style.css"
   },
@@ -19,7 +19,7 @@
   ],
   "scripts": {
     "dev": "vite",
-    "build": "vite build && tsc --emitDeclarationOnly",
+    "build": "vite build && tsc --project tsconfig.build.json",
     "lint": "eslint src --ext .ts,.tsx,.vue",
     "clean": "rm -rf dist node_modules"
   },
