--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "katex": "^0.16.25",
     "vue": "^3.3.0",
     "x-markdown": "workspace:*"
   },
