--- a/packages/x-markdown/package.json
+++ b/packages/x-markdown/package.json
@@ -38,8 +38,12 @@
     "deepmerge": "^4.3.1",
     "dompurify": "^3.0.0",
     "element-plus": "^2.5.0",
+    "hast": "^1.0.0",
     "lodash-es": "^4.17.21",
+    "mdast": "^3.0.0",
+    "mdast-util-to-hast": "^13.2.1",
     "mermaid": "^10.0.0",
+    "property-information": "^7.1.0",
     "rehype": "^13.0.0",
     "rehype-katex": "^7.0.0",
     "rehype-raw": "^7.0.0",
@@ -48,13 +52,18 @@
     "remark-breaks": "^4.0.0",
     "remark-gfm": "^4.0.0",
     "remark-math": "^6.0.0",
+    "remark-parse": "^11.0.0",
     "remark-rehype": "^11.0.0",
     "shiki": "^3.17.1",
     "shiki-stream": "^0.1.3",
-    "unified": "^11.0.0"
+    "unified": "^11.0.0",
+    "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
     "@types/dompurify": "^3.0.0",
+    "@types/hast": "^3.0.4",
+    "@types/lodash-es": "^4.17.12",
+    "@types/mdast": "^4.0.4",
     "@types/node": "^20.0.0",
     "@vitejs/plugin-vue": "^5.0.0",
     "@vueuse/core": "^14.1.0",
