--- a/packages/playground/tsconfig.json
+++ b/packages/playground/tsconfig.json
@@ -20,5 +20,6 @@
     }
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "exclude": ["node_modules", "dist", "**/*.md"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
