--- a/packages/x-markdown/tsconfig.json
+++ b/packages/x-markdown/tsconfig.json
@@ -24,6 +24,6 @@
     }
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
-  "exclude": ["node_modules", "dist"],
+  "exclude": ["node_modules", "dist", "**/*.md"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
