Refactor code structure for improved readability and maintainability

--- a/packages/x-markdown/package.json
+++ b/packages/x-markdown/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "x-markdown",
+  "name": "x-markdown-vue",
   "version": "0.0.1-beta.1",
   "description": "A markdown component library for Vue",
   "type": "module",
@@ -42,7 +42,7 @@
     "lodash-es": "^4.17.21",
     "mdast": "^3.0.0",
     "mdast-util-to-hast": "^13.2.1",
-    "mermaid": "^10.0.0",
+    "mermaid": "^11.12.2",
     "property-information": "^7.1.0",
     "rehype": "^13.0.0",
     "rehype-katex": "^7.0.0",
